--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,7 +13,7 @@
 		--foreground-rgb: 255, 255, 255;
 		--background-start-rgb: 0, 0, 0, 0.1;
 		/* --background-start-rgb: transparent; */
-		--background-end-rgb: 0, 0, 0;
+		--background-end-rgb: 52, 190, 161, 0.05;
 		/* --background-end-rgb: transparent; */
 	}
 }
@@ -28,8 +28,22 @@ body {
 		rgb(var(--background-start-rgb));
 }
 
+/* footer {
+	color: rgb(var(--foreground-rgb));
+	background: linear-gradient(
+			to top,
+			transparent,
+			rgb(var(--background-end-rgb))
+		)
+		rgb(var(--background-start-rgb));
+} */
+
 @layer utilities {
 	.text-balance {
 		text-wrap: balance;
 	}
 }
+
+/* .stroke-current {
+	stroke: 52, 190, 161;
+} */
